Criando conexão entre API e Infrastructure (aula 23 fim)

--- a/Restaurants.API/appsettings.json
+++ b/Restaurants.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RestaurantsDb": "Server=.\\SQLEXPRESS;Database=RestaurantsDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
