--- a/Restaurants.API/Properties/launchSettings.json
+++ b/Restaurants.API/Properties/launchSettings.json
@@ -13,7 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:7286;http://localhost:5156",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
